# faktura-casper

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DORAHACKS.md  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agents/: package-lock.json  package.json
agents/data/: seed.json
agents/scripts/: facilitator-demo.ts  intake-one.ts  make-seed.ts  mock-facilitator.ts  transfer.ts  verify-receipt.ts
agents/src/: chain-showcase.ts  chain.ts  collector.ts  config.ts  decision-memo.ts  e2e.ts  feed.ts  judge-limits.ts  judge.ts  llm.ts  mcp.ts  native-transfer.ts  real-ai.ts  release.ts  server.ts  store.ts  underwriter.ts  x402-client.ts  x402.ts
agents/test/: audit5.test.ts  audit6.test.ts  audit7.test.ts  judge-logic.test.ts  progress.test.ts
contracts/: Cargo.toml  Odra.toml
contracts/src/: lib.rs
docs/: architecture.md  judge-mode-design.md  x402.md
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  evidence.ts  main.tsx  styles.css  useModalA11y.ts  wallet.ts
