[package]
name = "faktura"
version = "0.1.0"
edition = "2021"
description = "Faktura - the autonomous invoice-financing desk on Casper"
license = "MIT"

[dependencies]
odra = { version = "2.8.2", default-features = false }
odra-casper-livenet-env = { version = "2.8.2", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
odra-test = "2.8.2"

[build-dependencies]
odra-build = "2.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.2"

[features]
default = []
livenet = ["dep:odra-casper-livenet-env", "dep:serde_json"]

[[bin]]
name = "faktura_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "faktura_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "livenet"
path = "bin/livenet.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
